Perkin-UAT/force-app/main/default/objects/Job_Detail__c/Job_Detail__c.object-meta.xml
<CustomObject>
    <label>Job Detail</label>
    <nameField>
        <label>Job Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>