Perkin-UAT/force-app/main/default/objects/Job_Detail__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <label>Billable</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>