Perkin-UAT/force-app/main/default/objects/Job_Detail__c/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <label>Travel</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>